helloworld.yml
# Simple HelloWorld backend service to demonstrate
# nginx rules
apiVersion: v1
kind: Service
metadata: 
  name: hello-world-svc
  namespace: nginx  
spec: 
  ports: 
     -  port: 80
        protocol: TCP
        targetPort: 80
  selector: 
    app: hello-world
  type: NodePort
---
apiVersion: apps/v1beta1
kind: Deployment
metadata: 
  name: hello-world-deployment
  namespace: nginx
spec: 
  replicas: 4
  template: 
    metadata: 
      labels: 
        app: hello-world
    spec: 
      containers: 
        - image: "karthequian/helloworld"
          imagePullPolicy: Always
          name: hello-world-container
          ports: 
            - containerPort: 80
